# Robotica

./: krembot.ino.cpp  krembot.ino.h
ex1sub/krembot_ws/: CMakeLists.txt  README.md
ex1sub/krembot_ws/config/: ex1.argos
ex1sub/krembot_ws/controllers/: CMakeLists.txt
ex1sub/krembot_ws/controllers/ex1/: CMakeLists.txt  krembot.ino.cpp  krembot.ino.h
ex2sol/: Readme  ex2.argos
ex2sol/ex2/: CMakeLists.txt  krembot.ino.cpp  krembot.ino.h
ex4/foraging_8/: CMakeLists.txt  ex4.pptx  krembot.ino.cpp  krembot.ino.h  report.docx
sol3/: README.txt  coarse-grid.txt  coarse-grid1.txt  coarse-weights.txt  coarse-with-robot-loc.txt  grid-with-robot-loc.txt  grid.txt  grids.xlsx  mst.txt  neighbors.txt  nodes.txt  nodesUni.txt  uniform-grid.txt  uniform-grid1.txt  uniform-weights.txt  uniform-with-robot-loc.txt
sol3/WSTC/: krembot.ino.cpp  krembot.ino.h
